--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -28,6 +28,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <RelativeLayout
+                android:id="@+id/layout_main_ui"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true">
+
+                    <ImageView
+                        android:id="@+id/image"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:layout_centerHorizontal="true"
+                        app:srcCompat="@mipmap/ic_launcher"></ImageView>
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/image"
+                        android:gravity="center_horizontal"
+                        android:paddingStart="15dp"
+                        android:paddingRight="15dp"
+                        android:text="Hoşgeldiniz, Main UI'yı görüntüleyebilirsiniz" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/button_open_main_ui"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/textView"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:gravity="center"
+                        android:text="MAIN UI"
+                        tools:text="MAIN UI" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
         </FrameLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
